--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1 id="logo"><a href="index.html">Landed</a></h1>
-					<nav id="nav">
+					<h1 id="logo"><a href="index.html">Home</a></h1>
+	<!--
+				<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li>
@@ -42,6 +43,7 @@
 							<li><a href="#" class="button primary">Sign Up</a></li>
 						</ul>
 					</nav>
+					-->
 				</header>
 
 			<!-- Banner -->
