--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Landed by HTML5 UP</title>
+		<title>mobri music</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -56,6 +56,8 @@
 						</header>
 						<span class="image"><img src="images/pic01.jpg" alt="" /></span>
 					</div>
+					
+					
 					<a href="#one" class="goto-next scrolly">Next</a>
 				</section>
 
@@ -72,8 +74,8 @@
 									</header>
 								</div>
 								<div class="col-4 col-12-medium">
-									<p>Mobri Music is an incubation for musical projects. It’s a chance to engage with you, the fans, and work on several artistic projects. A collective of producers, musicians, sound technicians and video production specialists involved in the industry. Nodman, Derek Keenan, Greg Scully, DisWeiD and others are part of that. 
-</p>
+									<p>Mobri Music is an incubation for musical projects. It’s a chance to engage with you, the fans, and work on several artistic projects. A collective of producers, musicians, sound technicians and video production specialists involved in the industry. Nodman, Derek Keenan, Greg Scully, DisWeiD and others are part of that. </p>
+									<iframe width="100%" height="400" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/460429278&color=%239a08ff&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false"></iframe>
 								</div>
 								<div class="col-4 col-12-medium">
 									<p>Mobri Music is mainly electronic based production. </p>
@@ -94,7 +96,10 @@
 						</header>
 						<p>It's all about the beat and the quality of sound. The experience in House Music is like no other. It's the modern disco and funk, the clashing and combination of genres that exists for the purpose of dance.</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+						<iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/521088564&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+<!--
+						<li><a href="#" class="button">Learn More</a></li>
+-->
 						</ul>
 					</div>
 					<a href="#three" class="goto-next scrolly">Next</a>
