--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	
 	</head>
 	<body class="is-preload landing">
 		<div id="page-wrapper">
@@ -19,34 +18,20 @@
 			<!-- Header -->
 				<header id="header">
 					<h1 id="logo"><a href="index.html">Home</a></h1>
-	<!--
-				<nav id="nav">
+					<nav id="nav">
 						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li>
-								<a href="#">Layouts</a>
+							<li><a href="#">Play Music</a>
 								<ul>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
-									<li>
-										<a href="#">Submenu</a>
-										<ul>
-											<li><a href="#">Option 1</a></li>
-											<li><a href="#">Option 2</a></li>
-											<li><a href="#">Option 3</a></li>
-											<li><a href="#">Option 4</a></li>
-										</ul>
-									</li>
+									<li><a href="soundcloud.html#house">House</a></li>
+									<li><a href="soundcloud.html#remixes">Remixes</a></li>
+									<li><a href="soundcloud.html#funk">Funk and Rock</a></li>
 								</ul>
 							</li>
-							<li><a href="elements.html">Elements</a></li>
-							<li><a href="#" class="button primary">Sign Up</a></li>
+							<li><a href="index.html#five" class="button primary">Sign Up</a></li>
 						</ul>
 					</nav>
-					-->
 				</header>
-
+					
 			<!-- Banner -->
 				<section id="banner">
 					<div class="content">
@@ -199,7 +184,7 @@
 					<form name="contact" method="POST" netlify>
 											<header>
 							<h2>Get notified</h2>
-							<p>We don't send many emails. For track/album releases and exclusive offers to fans, sign up to get them!</p>
+							<p>We don't send many emails. For track/album releases and exclusive offers to fans, sign up as a fan to get them!</p>
 						</header>
 					<div class="row gtr-uniform gtr-50">
 					<div class="col-8 col-12-xsmall"><input class="col-8 col-12-xsmall" type="text" name="name" placeholder="Your Name" /></div>					
@@ -223,7 +208,9 @@
 						
 					</ul>
 					<ul class="copyright">
-						<li>&copy; mobri. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; mobri. All rights reserved.</li> 
+						<li>Privacy: <a href="privacy.html">Privacy Policy</a></li>
+						<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</footer>
 
