--- a/soundcloud.html
+++ b/soundcloud.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Music</title>
+		<title>mobri music</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -57,7 +57,7 @@
 							<div class="col-8 col-12-medium">
 
 								<!-- Content -->
-									<section id="content">
+									<section id="content"><a id="house"></a>
 									<br>
 									<p>Crystal  </p>
 									<iframe width="100%" height="200" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/521088564&color=%23181f1c&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
@@ -89,7 +89,7 @@
 							<div class="col-4 col-12-medium">
 
 								<!-- Sidebar -->
-									<section id="sidebar">
+									<section id="sidebar"><a id="remixes"></a>
 										<section>
 											<h3>Remixes</h3>
 											<p>A selection of inspired, remixed, resampled or otherwise redo of some favourite tracks. </p>
@@ -107,7 +107,7 @@
 												</ul>
 												-->
 											</footer>
-										</section>
+										</section><a id="funk"></a>
 										<hr />
 										<section>
 											<h3>Funk and Rock</h3>
