--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 									</header>
 								</div>
 								<div class="col-4 col-12-medium">
-									<p>Mobri Music is an incubation for musical projects. It’s a chance to engage with you, the fans, and work on several artistic projects. A collective of producers, musicians, sound technicians and video production specialists involved in the industry. Nodman, Derek Keenan, Greg Scully, DisWeiD and others are part of that. </p>
+									<p>Mobri Music is an incubation for musical projects. It’s a chance to engage with you, the fans, and work on several artistic projects. A collective of producers, musicians, sound technicians and video production specialists involved in the industry. Nodman, Derek Keenan, Gasman, Idego Del Tuna, Psychowerks, DisWeiD and others are part of that. </p>
 									<iframe width="100%" height="400" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/460429278&color=%239a08ff&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false"></iframe>
 								</div>
 								<div class="col-4 col-12-medium">
