--- a/equipment.html
+++ b/equipment.html
@@ -15,35 +15,27 @@
 	<body class="is-preload">
 		<div id="page-wrapper">
 
-			<!-- Header -->
+<!-- Header -->
 				<header id="header">
 					<h1 id="logo"><a href="index.html">Home</a></h1>
-<!--
 					<nav id="nav">
 						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li>
-								<a href="#">Layouts</a>
+							<li><a href="#">Play Music</a>
 								<ul>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
-									<li>
-										<a href="#">Submenu</a>
-										<ul>
-											<li><a href="#">Option 1</a></li>
-											<li><a href="#">Option 2</a></li>
-											<li><a href="#">Option 3</a></li>
-											<li><a href="#">Option 4</a></li>
-										</ul>
-									</li>
+									<li><a href="soundcloud.html#house">House</a></li>
+									<li><a href="soundcloud.html#remixes">Remixes</a></li>
+									<li><a href="soundcloud.html#funk">Funk and Rock</a></li>
 								</ul>
 							</li>
-							<li><a href="elements.html">Elements</a></li>
-							<li><a href="#" class="button primary">Sign Up</a></li>
+							<li><a href="#">Projects</a>
+								<ul>
+									<li><a href="disweid.html">DisWeiD</a></li>
+									<li><a href="nodman.html">Nodman</a></li>
+								</ul>
+							</li>
+
 						</ul>
 					</nav>
--->
 				</header>
 
 			<!-- Main -->
@@ -78,7 +70,7 @@
 										<section>
 											<h3>Ableton Live</h3>
 											<p>What Ableton Live has done for musicians in electronic music is unreal. In the past, you would need to hook up lots of midi devices and machine codes, and manage your network with limited loops, and try and limit and manage all those devices live via control surfaces and the nobs and buttons on the devices themselves. In some cases, that means running around to all your devices to change their pathes in the middle of a gig.</p>
-											<p>Now, we can manage it all in one application, and that application connects all the devices, both inputs and outputs. It's versatile for a jam in the studio, and robust to gig with. A must for any performing electronic musician/
+											<p>Now, we can manage it all in one application, and that application connects all the devices, both inputs and outputs. It's versatile for a jam in the studio, and robust to gig with. A must for any performing electronic musician.
 											<footer>
 											<!--
 												<ul class="actions">
@@ -91,7 +83,7 @@
 										<section>
 											<a href="#" class="image fit"><img src="images/roland_rd300.jpg" alt="" /></a>
 											<h3>Roland RD-300</h3>
-											<p>This is a beautiful stage piano, with proper weighted keys and beautiful full sounds. Strings, Piano and Organ pathes are quality. It has many more, but I don't find them that usable. For example, the synth sounds are too regid and need some modulation to be fun, the funk organ sounds are fine, but the weighted keys is less ideal for sliding up and down the keyboard (like on a Nord).</p>
+											<p>This is a beautiful stage piano, with proper weighted keys and beautiful full sounds. Strings, Piano and Organ pathes are quality. It has many more, but I don't find them that usable. For example, the synth sounds are too rigid and need some modulation to be fun, the funk organ sounds are fine, but the weighted keys is less ideal for sliding up and down the keyboard (like on a Nord).</p>
 											<p>Why this over other synths? When you start to compose a tune, there's a lot of dynamics to put in to really feel the tune and the swing. This is where you can really feel a tune with the RD-300 and compose not just the notes, but the feeling for the track that forms in your mind, which is what you need to complete the rest of the track. </p>
 											<footer>
 											<!--
@@ -109,6 +101,7 @@
 				</div>
 
 		<!-- Footer -->
+				<!-- Footer -->
 				<footer id="footer">
 					<ul class="icons">
 						<li><a href="https://www.instagram.com/mobri_irl/" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
@@ -119,7 +112,9 @@
 						
 					</ul>
 					<ul class="copyright">
-						<li>&copy; mobri. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; mobri. All rights reserved.</li> 
+						<li>Privacy: <a href="privacy.html">Privacy Policy</a></li>
+						<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</footer>
 
