--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
 									<li><a href="soundcloud.html#funk">Funk and Rock</a></li>
 								</ul>
 							</li>
+							<li><a href="#">Projects</a>
+								<ul>
+									<li><a href="disweid.html">DisWeiD</a></li>
+									<li><a href="nodman.html">Nodman</a></li>
+								</ul>
+							</li>
 							<li><a href="index.html#five" class="button primary">Sign Up</a></li>
 						</ul>
 					</nav>
