--- a/nodman.html
+++ b/nodman.html
@@ -131,7 +131,7 @@
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon alt major fa-music"></span>
 									<h3>Nodman Website</h3>
-									<p><a href="https://www.facebook.com/DisWeiD-162417033968300/" class="button">Go</a></p>
+									<p><a href="http://nodman.band" class="button">Go</a></p>
 								</section>
 
 								<section class="col-4 col-6-medium col-12-xsmall">
