--- a/nodman.html
+++ b/nodman.html
@@ -6,6 +6,7 @@
 -->
 <html>
 	<head>
+		<link REL="SHORTCUT ICON" HREF="mobri.ico">
 		<title>Nodman</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -62,7 +63,7 @@
 										</section>
 										<hr />
 										<section>
-											<a href="#" class="image fit"><img src="images/kc2.jpg" alt="" /></a>
+											
 											<h3>Debut Album</h3>
 											<p>His self produced eponymous debut album is available now for digit download and on blue vinyl for a limited run. This a 10 track, 40 minute eclectic mix of electro swing, pop, rock, punk with a nod to hip hop, jazz and Electronica. The name 'Nodman' is the college derivative of his childhood nickname - Noddy. Possibly due to his unusually large head.</p>
 											<p>The album is available on Bandcamp. Stream all you like, download it for 5 euro or more. Vinyl is also available via CDbaby.</p>
