--- a/nodman.html
+++ b/nodman.html
@@ -31,6 +31,7 @@
 							<li><a href="#">Projects</a>
 								<ul>
 									<li><a href="disweid.html">DisWeiD</a></li>
+									<li><a href="step3prophet.html">Step3Prophet</a></li>
 									<li><a href="nodman.html">Nodman</a></li>
 								</ul>
 							</li>
