--- a/soundcloud.html
+++ b/soundcloud.html
@@ -6,6 +6,7 @@
 -->
 <html>
 	<head>
+		<link REL="SHORTCUT ICON" HREF="mobri.ico">
 		<title>mobri music</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -30,6 +31,7 @@
 							<li><a href="#">Projects</a>
 								<ul>
 									<li><a href="disweid.html">DisWeiD</a></li>
+									<li><a href="step3prophet.html">Step3Prophet</a></li>
 									<li><a href="nodman.html">Nodman</a></li>
 								</ul>
 							</li>
