--- a/privacy.html
+++ b/privacy.html
@@ -36,7 +36,7 @@
 									<li><a href="nodman.html">Nodman</a></li>
 								</ul>
 							</li>
-							<li><a href="index.html#five" class="button primary">Sign Up</a></li>
+							<!-- <li><a href="index.html#five" class="button primary">Sign Up</a></li> -->
 						</ul>
 					</nav>
 				</header>
