--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 						<ul>
 							<li><a href="#">Play Music</a>
 								<ul>
-									<li><a href="soundcloud.html#house">House Music</a></li>
+									<li><a href="mixcloud.html">Mixes and Live</a></li>
+									<li><a href="soundcloud.html#house">Mobri Tunes</a></li>
 									<li><a href="soundcloud.html#remixes">Remixes</a></li>
 									<li><a href="soundcloud.html#funk">Funk and Rock</a></li>
 								</ul>
@@ -139,9 +140,9 @@
 									<p><a href="https://soundcloud.com/mobri-1" class="button">mobri-1</a> </p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon alt major fa-file"></span>
-									<h3>Downloads</h3>
-									<p>Comming soon... Midi Files, DJ Mixes, Synth Patches </p>
+									<span class="icon alt major fa-mixcloud"></span>
+									<h3>Mixcloud</h3>
+									<p><a href="https://www.mixcloud.com/mobri/" class="button">mobri</a></p>
 								</section>
 							</div>
 						</div>
@@ -187,10 +188,12 @@
 				</section>
 
 			<!-- Five -->
+			
+			<!--	
 				<section id="five" class="wrapper style2 special fade">
 					<div class="container">
 					
-					<form name="contact" method="POST" netlify>
+				<form name="contact" method="POST" netlify>
 											<header>
 							<h2>Get notified</h2>
 							<p>We don't send many emails. For track/album releases and exclusive offers to fans, sign up as a fan to get them!</p>
@@ -205,7 +208,7 @@
 
 					</div>
 				</section>
-
+-->
 			<!-- Footer -->
 				<footer id="footer">
 					<ul class="icons">
