--- a/mixcloud.html
+++ b/mixcloud.html
@@ -45,7 +45,7 @@
 				<div id="main" class="wrapper style1">
 					<div class="container">
 						<header class="major"><a id="house"></a>
-							<h2>Music</h2>
+							<h2>Mixes`and Live</h2>
 							<p>  </p>
 						</header>
 						<div class="row gtr-150">
@@ -54,63 +54,19 @@
 								<section id="content">
 								<br>
 								
-								<h2>House Music</h2>
-
-								<table style="width:100%">
-									<tr>
-									<th><p></p>  
-									<iframe width="80%" height="150" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/521088564&color=%23181f1c&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe></th><p></p>
-									<th>Crystal</th> 
-									<th>House</th>
-									</tr>
-									<tr>
-									<td><p></p>									
-									<iframe width="80%" height="150" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/335208462&color=%23200404&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><p></p></td>
-									<td>Not On File </td> 
-									<td>House</td>
-									</tr>
-									<tr>
-									<td><p></p>							
-									<iframe width="80%" height="150" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/334108556&color=%23946c64&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><p></p></td>
-									<td>Cap d'Agag </td> 
-									<td>House</td>
-									</tr>
-																		<tr>
-									<td><p></p>								
-									<iframe width="80%" height="150" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/336229002&color=%231f1c1a&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><p></p></td>
-									<td>Frisco Fun</td> 
-									<td>Deep House</td>
-									</tr>
-																		<tr>
-									<td><p></p>					
-									<iframe width="80%" height="150" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/343389762&color=%23090c27&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><p></p></td>
-									<td>Deep and Still</td> 
-									<td>Deep House</td>
-									</tr>
-																		<tr>
-									<td><p></p>
-									<iframe width="80%" height="150" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/126216133&color=%234c4432&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><p></p></td>
-									<td>Beerzinnagee</td> 
-									<td>House</td>
-									</tr>
-																		<tr>
-									<td><p></p>
-									<iframe width="80%" height="150" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/119680094&color=%233e3030&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><p></p></td>
-									<td>At All</td> 
-									<td>House</td>
-									</tr>
-																		<tr>
-									<td><p></p>
-									<iframe width="80%" height="150" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/341869476&color=%230066cc&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><p></p></td>
-									<td>Come Fly</td> 
-									<td>House</td>
-									</tr>
-								</table>
+								<h2>1 - 2 hour live sets and mixes</h2>
+								<p><iframe width="100%" height="120" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&feed=%2Fmobri%2Fmobris-techno-space-house-mix-1%2F" frameborder="0" ></iframe>  </p>
+								<p><iframe width="100%" height="120" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&feed=%2Fmobri%2Fthe-orb-et-al%2F" frameborder="0" ></iframe>  </p>
+								<p><iframe width="100%" height="120" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&feed=%2Fmobri%2Fdaft-punk-millbank-set-mobri-mix%2F" frameborder="0" ></iframe>  </p>
+								<p><iframe width="100%" height="120" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&feed=%2Fmobri%2Fmobri-set-2019-with-thanks-to-disweid-and-nodman%2F" frameborder="0" ></iframe>  </p>
+								<p><iframe width="100%" height="120" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&feed=%2Fmobri%2Flazy-sunday-mobri-mix%2F" frameborder="0" ></iframe>  </p>
+								
 								</section>								
 							</div>
 							<div class="col-4 col-12-medium">
 
 								<!-- Sidebar -->
+								<!--
 									<section id="sidebar"><a id="remixes"></a>
 										<section>
 											<h3>Remixes</h3>
@@ -149,6 +105,7 @@
 											</footer>
 										</section>
 									</section>
+									-->
 
 							</div>
 						</div>
