--- a/privacy.html
+++ b/privacy.html
@@ -24,7 +24,8 @@
 						<ul>
 							<li><a href="#">Play Music</a>
 								<ul>
-									<li><a href="soundcloud.html#house">House</a></li>
+									<li><a href="mixcloud.html">Mixes and Live</a></li>
+									<li><a href="soundcloud.html#house">Mobri Tunes</a></li>
 									<li><a href="soundcloud.html#remixes">Remixes</a></li>
 									<li><a href="soundcloud.html#funk">Funk and Rock</a></li>
 								</ul>
@@ -36,7 +37,6 @@
 									<li><a href="nodman.html">Nodman</a></li>
 								</ul>
 							</li>
-							<!-- <li><a href="index.html#five" class="button primary">Sign Up</a></li> -->
 						</ul>
 					</nav>
 				</header>
