--- a/step3prophet.html
+++ b/step3prophet.html
@@ -23,7 +23,8 @@
 						<ul>
 							<li><a href="#">Play Music</a>
 								<ul>
-									<li><a href="soundcloud.html#house">House</a></li>
+									<li><a href="mixcloud.html">Mixes and Live</a></li>
+									<li><a href="soundcloud.html#house">Mobri Tunes</a></li>
 									<li><a href="soundcloud.html#remixes">Remixes</a></li>
 									<li><a href="soundcloud.html#funk">Funk and Rock</a></li>
 								</ul>
@@ -31,6 +32,7 @@
 							<li><a href="#">Projects</a>
 								<ul>
 									<li><a href="disweid.html">DisWeiD</a></li>
+									<li><a href="step3prophet.html">Step3Prophet</a></li>
 									<li><a href="nodman.html">Nodman</a></li>
 								</ul>
 							</li>
