--- a/nodman.html
+++ b/nodman.html
@@ -23,7 +23,8 @@
 						<ul>
 							<li><a href="#">Play Music</a>
 								<ul>
-									<li><a href="soundcloud.html#house">House</a></li>
+									<li><a href="mixcloud.html">Mixes and Live</a></li>
+									<li><a href="soundcloud.html#house">Mobri Tunes</a></li>
 									<li><a href="soundcloud.html#remixes">Remixes</a></li>
 									<li><a href="soundcloud.html#funk">Funk and Rock</a></li>
 								</ul>
